--- a/project/Untitled1.ipynb
+++ b/project/Untitled1.ipynb
@@ -209,51 +209,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Files already downloaded and verified\n",
-      "Files already downloaded and verified\n",
-      "epoch:  0 total_correct:  22657\n",
-      "training accuracy:  0.45314\n",
-      "testing accuracy:  0.598\n",
-      "epoch:  1 total_correct:  33433\n",
-      "training accuracy:  0.66866\n",
-      "testing accuracy:  0.7076\n",
-      "epoch:  2 total_correct:  38198\n",
-      "training accuracy:  0.76396\n",
-      "testing accuracy:  0.7596\n",
-      "epoch:  3 total_correct:  41181\n",
-      "training accuracy:  0.82362\n",
-      "testing accuracy:  0.7715\n",
-      "epoch:  4 total_correct:  43418\n",
-      "training accuracy:  0.86836\n",
-      "testing accuracy:  0.7735\n",
-      "0.7735\n"
+      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar10/cifar-10-python.tar.gz\n"
      ]
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df04aaadfe71426ba937716467ee84c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "0.7735"
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
       ]
      },
-     "execution_count": 14,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting ./data/cifar10/cifar-10-python.tar.gz to ./data/cifar10\n",
+      "Files already downloaded and verified\n",
+      "epoch:  0 total_correct:  23039\n",
+      "training accuracy:  0.46078\n",
+      "testing accuracy:  0.6043\n",
+      "0.6043\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "epoch:  0 total_correct:  17032\n",
+      "training accuracy:  0.34064\n",
+      "testing accuracy:  0.4365\n",
+      "0.4365\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "epoch:  0 total_correct:  19178\n",
+      "training accuracy:  0.38356\n",
+      "testing accuracy:  0.4998\n",
+      "0.4998\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "epoch:  0 total_correct:  12728\n",
+      "training accuracy:  0.25456\n",
+      "testing accuracy:  0.3459\n",
+      "0.3459\n",
+      "[0.6043, 0.4365, 0.4998, 0.3459]\n"
+     ]
     }
    ],
    "source": [
-    "do_test(flag_augmetation = False, \n",
-    "        flag_cutout = False, \n",
-    "        n_holes = 10, \n",
-    "        length = 10, \n",
-    "        depth = 18,\n",
-    "        epochs = 5)"
+    "list_acc = []\n",
+    "for depth in [18,34]:\n",
+    "    for flag_cutout in [False, True]:\n",
+    "        acc = do_test(flag_augmetation = False, \n",
+    "                flag_cutout = flag_cutout, \n",
+    "                n_holes = 10, \n",
+    "                length = 10, \n",
+    "                depth = depth,\n",
+    "                epochs = 1)\n",
+    "        list_acc.append(acc)\n",
+    "print(list_acc)"
    ]
   },
   {
