--- a/project/Untitled1.ipynb
+++ b/project/Untitled1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,7 @@
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
     "import torch.optim as optim\n",
-    "from tqdm import tqdm_notebook as tqdm\n",
-    "\n",
+    "from torch.optim.lr_scheduler import MultiStepLR\n",
     "\n",
     "def get_num_correct(pred,labels):\n",
     "    return pred.argmax(dim=1).eq(labels).sum().item()\n",
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,19 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_(train_set,test_set,depth,model_checkpoint,epochs):\n",
+    "def train_(train_set,test_set,lr, depth,model_checkpoint,epochs):\n",
     "\n",
     "    torch.manual_seed(1)\n",
     "    train_loader=torch.utils.data.DataLoader(train_set, batch_size=128, shuffle=False, pin_memory=True,num_workers=2)\n",
     "    test_loader=torch.utils.data.DataLoader(test_set, batch_size=100, shuffle=False, pin_memory=True,num_workers=2)\n",
     "    network= Net(depth).to(device)\n",
-    "    optimizer = optim.SGD(network.parameters(), lr=0.05, momentum=0.9, nesterov=True, weight_decay=5e-4)\n",
+    "    optimizer = optim.SGD(network.parameters(), lr=lr, momentum=0.9, nesterov=True, weight_decay=5e-4)\n",
     "    criterion = torch.nn.CrossEntropyLoss().to(device)\n",
-    "    scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=1, gamma=0.95)\n",
+    "#     scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=1, gamma=0.95)\n",
+    "    scheduler = MultiStepLR(optimizer, milestones=[30, 60, 80], gamma=0.2)\n",
+    "    \n",
     "    acc_train=[]\n",
     "    acc_test=[]\n",
     "    acc = 0\n",
@@ -155,21 +156,22 @@
     "            best_acc = acc\n",
     "            torch.save(network.state_dict(), model_checkpoint)\n",
     "\n",
-    "    return best_acc"
+    "    return (acc_train,acc_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def do_test(flag_augmetation = False, \n",
     "            flag_cutout = False, \n",
-    "            n_holes = 10, \n",
-    "            length = 10, \n",
+    "            n_holes = 1, \n",
+    "            length = 16, \n",
     "            depth = 18,\n",
-    "            epochs = 100\n",
+    "            epochs = 100,\n",
+    "            lr = 0.1\n",
     "           ):\n",
     "    model_checkpoint = \"resnet\" + str(depth) \n",
     "    if flag_augmetation:\n",
@@ -203,65 +205,97 @@
     "        download=True,\n",
     "        transform=transforms.Compose([transforms.ToTensor(), normalize]))\n",
     "    \n",
-    "    acc = train_(train_set,test_set,depth, model_checkpoint, epochs = epochs)\n",
-    "    return acc"
+    "    acc_train,acc_test = train_(train_set,test_set,lr, depth, model_checkpoint, epochs = epochs)\n",
+    "    return (acc_train,acc_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz to ./data/cifar10/cifar-10-python.tar.gz\n"
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "epoch:  0 total_correct:  17934\n",
+      "training accuracy:  0.35868\n",
+      "testing accuracy:  0.4919\n",
+      "epoch:  1 total_correct:  28205\n",
+      "training accuracy:  0.5641\n",
+      "testing accuracy:  0.6224\n",
+      "0.6224\n"
      ]
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "df04aaadfe71426ba937716467ee84c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+       "([0.35868, 0.5641], [0.4919, 0.6224])"
       ]
      },
+     "execution_count": 54,
      "metadata": {},
-     "output_type": "display_data"
-    },
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do_test(flag_augmetation = False, \n",
+    "            flag_cutout = False, \n",
+    "            n_holes = 1, \n",
+    "            length = 16, \n",
+    "            depth = 18,\n",
+    "            epochs = 2,\n",
+    "            lr = 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Extracting ./data/cifar10/cifar-10-python.tar.gz to ./data/cifar10\n",
-      "Files already downloaded and verified\n",
-      "epoch:  0 total_correct:  23039\n",
-      "training accuracy:  0.46078\n",
-      "testing accuracy:  0.6043\n",
-      "0.6043\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
-      "epoch:  0 total_correct:  17032\n",
-      "training accuracy:  0.34064\n",
-      "testing accuracy:  0.4365\n",
-      "0.4365\n",
+      "epoch:  0 total_correct:  18156\n",
+      "training accuracy:  0.36312\n",
+      "testing accuracy:  0.4859\n",
+      "epoch:  1 total_correct:  28414\n",
+      "training accuracy:  0.56828\n",
+      "testing accuracy:  0.632\n",
+      "0.632\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
-      "epoch:  0 total_correct:  19178\n",
-      "training accuracy:  0.38356\n",
-      "testing accuracy:  0.4998\n",
-      "0.4998\n",
+      "epoch:  0 total_correct:  14137\n",
+      "training accuracy:  0.28274\n",
+      "testing accuracy:  0.3772\n",
+      "epoch:  1 total_correct:  20721\n",
+      "training accuracy:  0.41442\n",
+      "testing accuracy:  0.4675\n",
+      "0.4675\n",
       "Files already downloaded and verified\n",
       "Files already downloaded and verified\n",
-      "epoch:  0 total_correct:  12728\n",
-      "training accuracy:  0.25456\n",
-      "testing accuracy:  0.3459\n",
-      "0.3459\n",
-      "[0.6043, 0.4365, 0.4998, 0.3459]\n"
+      "epoch:  0 total_correct:  14776\n",
+      "training accuracy:  0.29552\n",
+      "testing accuracy:  0.424\n",
+      "epoch:  1 total_correct:  24451\n",
+      "training accuracy:  0.48902\n",
+      "testing accuracy:  0.5479\n",
+      "0.5479\n",
+      "Files already downloaded and verified\n",
+      "Files already downloaded and verified\n",
+      "epoch:  0 total_correct:  11519\n",
+      "training accuracy:  0.23038\n",
+      "testing accuracy:  0.3247\n",
+      "epoch:  1 total_correct:  17293\n",
+      "training accuracy:  0.34586\n",
+      "testing accuracy:  0.3963\n",
+      "0.3963\n",
+      "[[0.36312, 0.56828], [0.4859, 0.632], [0.28274, 0.41442], [0.3772, 0.4675], [0.29552, 0.48902], [0.424, 0.5479], [0.23038, 0.34586], [0.3247, 0.3963]]\n"
      ]
     }
    ],
@@ -269,20 +303,39 @@
     "list_acc = []\n",
     "for depth in [18,34]:\n",
     "    for flag_cutout in [False, True]:\n",
-    "        acc = do_test(flag_augmetation = False, \n",
-    "                flag_cutout = flag_cutout, \n",
-    "                n_holes = 10, \n",
-    "                length = 10, \n",
-    "                depth = depth,\n",
-    "                epochs = 1)\n",
-    "        list_acc.append(acc)\n",
+    "        acc_train,acc_test  = do_test(flag_augmetation = False, \n",
+    "                                            flag_cutout = flag_cutout, \n",
+    "                                            n_holes = 10, \n",
+    "                                            length = 10, \n",
+    "                                            depth = depth,\n",
+    "                                            epochs = 2,\n",
+    "                                          lr = 0.1)\n",
+    "        \n",
+    "        list_acc.append(acc_train)\n",
+    "        list_acc.append(acc_test)\n",
     "print(list_acc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "list_acc = pd.DataFrame(list_acc)\n",
+    "list_acc.to_csv(\"acc.csv\",index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
